Brenna Second Revision

--- a/Conference_Final/deepak_rss_paper.tex
+++ b/Conference_Final/deepak_rss_paper.tex
@@ -85,7 +85,7 @@ Brenna D. Argall\authorrefmark{1}\authorrefmark{2}\authorrefmark{3}\authorrefmar
 
 In this paper, we develop an algorithm for intent inference via goal disambiguation with a shared-control assistive robotic arm. Assistive systems are often required to infer human intent and this usually becomes a bottleneck for providing assistance quickly and accurately. We introduce the notion of \textit{inverse legibility} in which the human-generated actions are legible enough for the \textit{robot} to infer the human intent confidently and accurately. The proposed disambiguation paradigm seeks to elicit legible control commands from the human by selecting control modes that \textit{maximally disambiguate} between the various goals in the scene. We present simulation results which look into the robustness of our algorithm and the impact of the choice of confidence functions on the performance of the system. 
 %Our simulation results suggest that the disambiguating control mode computed by our algorithm produces more intuitive results when the confidence function is able to capture the ``directedness'' towards a goal. 
-Our simulations results suggest that the choice of confidence functions is a critical factor in determining the disambiguation algorithm's capability to capture human intent in an intuitive way. We also present a pilot study that explores the efficacy of the algorithm on real hardware with promising preliminary results.
+\textcolor{blue}{Our simulations results suggest that the choice of confidence functions is a critical factor in determining the disambiguation algorithm's capability to capture human intent in an intuitive way}. We also present a pilot study that explores the efficacy of the algorithm on real hardware with promising preliminary results.
 % indicate that the assistance paradigm proposed \textcolor{blue}{is a promising approach} in decreasing task effort (number of mode switches) across interfaces and tasks. 
 \end{abstract}
 
@@ -98,7 +98,7 @@ Assistive and rehabilitation devices such as powered wheelchairs, robotic arms a
 The common paradigms for operating such high-dimensional devices have the human directly control the device motion via a control interface. However, the more severe a person's motor impairment, the more limited are the control interfaces available for them to use. These interfaces (for example, a switch-based head array or Sip-N-Puff) are lower in dimensionality and bandwidth, and usually require more mode switches for successful task completion. Therefore, we have a difficult situation, in which sophisticated assistive devices that require complex control strategies are paired with users with diminished ability to control them.
 %Thus, a greater need for sophisticated assistive devices is paired with a diminishing ability to control their additional complexity. 
 
-Due to the mismatch between the dimensionality of the control interface and controllable degrees-of-freedom (DOF) of the robotic device, control interfaces typically operate in \textit{modes} which correspond to different partitions of the control space. By necessity, the more limited the control interface is, the greater number of modes there are. In order to have full control of the robot the user will have to switch between the different partitions and this is known as \textit{mode switching or modal control}~\cite{tsui2008development, nuttin2002selection}. 
+Due to the mismatch between the dimensionality of the control interface and controllable degrees-of-freedom (DOF) of the robotic device, control interfaces typically operate in \textit{modes} which correspond to different partitions of the control space. By necessity, the more limited the control interface is, the greater number of modes there are. In order to have full control of the robot the user will have to switch between the different partitions and this is known as \textit{mode switching} or \textit{modal control}~\cite{tsui2008development, nuttin2002selection}. 
 
 It has been established that mode switching is expensive and as a result task performance is degraded. Furthermore, it adds to the cognitive and physical burden as each of these mode switches requires the user to shift their attention from the task to performing the mode switch. The introduction of \textit{shared autonomy} to these systems helps to alleviate and address some of these issues by letting the system take partial responsibility of task execution, thereby reducing the human effort in achieving a goal. 
 
@@ -119,7 +119,7 @@ For any assistive autonomy, the system typically needs an idea of what it is the
 		\includegraphics[width=0.3\textwidth]{./figures/DE_NEW1.png}
 	\end{center}
 	\vspace{-.85cm}
-	\caption{Illustration of goal disambiguation along various control dimensions. Any motion of the end effector (purple) along the y-axis will not help the system to disambiguate the two goals (A and B); that is, the motion is not legible. However, motion along the x-axis provides cues as to which goal.}
+	\caption{\textcolor{blue}{Illustration of goal disambiguation along various control dimensions. Any motion of the end effector (purple) along the y-axis will not help the system to disambiguate the two goals (A and B); that is, the motion is not legible. However, motion along the x-axis provides cues as to which goal.}}
 	\label{DE}
 \end{wrapfigure}
 
@@ -137,12 +137,12 @@ In Section \ref{RW} we present an overview of relevant research in the area of s
 
 \section{RELATED WORKS}\label{RW} 
 
-This section provides a brief overview of related research in the areas of intent inference, robot assistance for modal control, legibility and cooperation in HRI.
+\textcolor{blue}{This section provides a brief overview of related research in the areas of intent inference, robot assistance for modal control, legibility and cooperation in HRI}.
 
-Shared-control assistance paradigms help to offload cognitive and physical burden~\cite{volosyak2005rehabilitation} without requiring the user to relinquish complete control, and are usually preferred over fully autonomous assistive robotic systems for reasons of both robustness and user satisfaction. Often, shared control systems require an estimate of the human's intent---their intended task, goal or motion, for example. Methods for intent inference have been extensively studied by roboticists and cognitive scientists alike and can be broadly classified into two categories: model-based and heuristic-based~\cite{baker2017rational}. In model-based approaches the agent is typically modeled as a Partially Observable Markov Decision Process (POMDP) that acts according to a policy that maps states to actions. In such settings, intent inference reduces to solving the inverse problem of computing the posterior distribution over mental states conditioned on observed actions (Bayesian Inference)~\cite{baker2007goal,baker2009action}. Heuristic-based approaches instead seek to find direct mappings between some signals such as low-level motion cues~\cite{barrett2005accurate}, biological signals~\cite{donoghue2002connecting} and the underlying human intention. Heuristic-based approaches usually are computationally less expensive than model-based approaches. Our approach builds on a heuristic-based intent inference framework. More specifically, we use a \textit{confidence function} as a measure of the robot's estimate that a particular goal is indeed the user's intended goal. Confidence functions usually depend on the human control command, the autonomous policy, robot pose, goal locations \textit{et cetera}. and dictates how much control lies with the robot versus with the human in the shared-control system. 
+Shared-control assistance paradigms help to offload cognitive and physical burden~\cite{volosyak2005rehabilitation} without requiring the user to relinquish complete control, and are usually preferred over fully autonomous assistive robotic systems for reasons of both robustness and user satisfaction. Often, shared control systems require an estimate of the human's intent---their intended task, goal or motion, for example. Methods for intent inference have been extensively studied by roboticists and cognitive scientists alike and can be broadly classified into two categories: model-based and heuristic-based~\cite{baker2017rational}. In model-based approaches the agent is typically modeled as a Partially Observable Markov Decision Process (POMDP) that acts according to a policy that maps states to actions. In such settings, intent inference reduces to solving the inverse problem of computing the posterior distribution over mental states conditioned on observed actions (Bayesian Inference)~\cite{baker2007goal,baker2009action}. Heuristic-based approaches instead seek to find direct mappings between some signals such as low-level motion cues~\cite{barrett2005accurate}, biological signals~\cite{donoghue2002connecting} and the underlying human intention. Heuristic-based approaches usually are computationally less expensive than model-based approaches. \textcolor{blue}{Our approach builds on a heuristic-based intent inference framework. More specifically, we use a \textit{confidence function} as a measure of the robot's estimate that a particular goal is indeed the user's intended goal. Confidence functions usually depend on the human control command, the autonomous policy, robot pose, goal locations \textit{et cetera}. and dictates how much control lies with the robot versus with the human in the shared-control system}. 
 % One possible way to control high-dimensional assistive devices such as robotic arms is to partition the control space (often 6D for a robotic arm) into subsets called \textit{modes} and have the user control one mode at a time using control interfaces such as joysticks, head arrays and sip-and-puffs. This is known as \textit{modal control}.
 
-The cognitive burden of shifting focus (\textit{task switching})  from the task at hand to mode switches can result in a significant decrease in task performance regardless of the control modality~\cite{monsell2003task}. Researchers have also shown that a significant number of users have found \textit{modal control} and \textit{mode switching} to be slow, difficult and burdensome~\cite{herlant2016assistive}. Even a simple time-optimal automatic mode switching system can significantly improve user satisfaction while maintaining the quality task performance~\cite{herlant2016assistive}.  Another study~\cite{gopinath2017human} found that it is not always the case that users are trying to optimize for time or effort during task execution. Our present system therefore does not make \textit{a priori} assumptions regarding the optimizing principles at work when a user operates a robot.
+The cognitive burden of shifting focus (\textit{task switching}) from the task at hand to mode switches can result in a significant decrease in task performance regardless of the control modality~\cite{monsell2003task}. Researchers have also shown that a significant number of users have found \textit{modal control} and \textit{mode switching} to be slow, difficult and burdensome~\cite{herlant2016assistive}. Even a simple time-optimal automatic mode switching system can significantly improve user satisfaction while maintaining the quality task performance~\cite{herlant2016assistive}.  Another study~\cite{gopinath2017human} found that it is not always the case that users are trying to optimize for time or effort during task execution. Our present system therefore does not make \textit{a priori} assumptions regarding the optimizing principles at work when a user operates a robot.
 
 The legibility and predictability of robot motion \textit{to the human} have been thoroughly investigated~\cite{dragan2013legibility}, and different methods for generating legible robot motion have also been proposed~\cite{holladay2014legible}. We apply this concept of legibility however to the \textit{human control} commands, such that the intent expressed in the human command is clear \textit{to the robot}. Our assistance scheme is intended to bring out a more legible intent-expressive control command from the human, by placing the user control in that mode which can provide maximal goal disambiguation and improved legibility.
 
@@ -150,17 +150,17 @@ Eliciting legible commands from the user can also be thought of as an informatio
 %In most cases the human knows beforehand what goal he/she is going for and therefore the motion generated by the human is usually \textit{predictable}.
 
 
-Also related to our work is the idea of mutual cooperation between humans and robots, and the underlying synergies that are crucial for successful human-robot interaction. In order to overcome the communication bottleneck that exists between robots and people during human-robot interactions, different types of user interfaces have been developed by accounting for the constrained capabilities of the robot~\cite{goodfellow2010help}. Their work exploits the fact that humans are good at changing communication strategies and compensate for limited communication bandwidth effectively thereby not requiring the robots to perfectly understand natural language interactions. A framework for \textit{``people helping robots helping people''} was developed in which humans provide semantic information and judgments about the environment to the robot which then utilizes them to improve its own capabilities~\cite{sorokin2010people}. Researchers have also developed a \textit{symbiotic} human robot interaction scheme which aims to overcome perceptual and cognitive limitations that robots might encounter while still allowing the robots to help humans as well~\cite{rosenthal2010effective}. From the robot's perspective the key concept behind our algorithm is the idea of \textit{``Help Me, Help You''}---that is, if the human can ``help'' the robot by providing more legible control commands, then the robot in turn can assist the human even more effectively.
+Also related to our work is the idea of mutual cooperation between humans and robots, and the underlying synergies that are crucial for successful human-robot interaction. \textcolor{blue}{In order to overcome the communication bottleneck that exists between robots and people during human-robot interactions, different types of user interfaces have been developed by accounting for the constrained capabilities of the robot~\cite{goodfellow2010help}. Their work exploits the fact that humans are good at changing communication strategies and compensate for limited communication bandwidth effectively thereby not requiring the robots to perfectly understand natural language interactions. A framework for \textit{``people helping robots helping people''} was developed in which humans provide semantic information and judgments about the environment to the robot which then utilizes them to improve its own capabilities~\cite{sorokin2010people}. Researchers have also developed a \textit{symbiotic} human robot interaction scheme which aims to overcome perceptual and cognitive limitations that robots might encounter while still allowing the robots to help humans as well~\cite{rosenthal2010effective}. From the robot's perspective the key concept behind our algorithm is the idea of \textit{``Help Me, Help You''}---that is, if the human can ``help'' the robot by providing more legible control commands, then the robot in turn can assist the human even more effectively.}
 
 \begin{figure}
 %	\centering
 	\includegraphics[width = 1\hsize, height = 0.26\vsize]{./figures/DisambMetric_New1.png}
 	\vspace{-0.4cm}
-	\caption{Illustration of change in confidence with movement along a single control dimension. A very different distribution of confidences results from positive motion (beige) versus negative motion (blue). Snapshots after moving by amount $\delta x$ highlighted by rectangles.}
+	\caption{\textcolor{blue}{Illustration of change in confidence with movement along a single control dimension. A very different distribution of confidences results from positive motion (beige) versus negative motion (blue). Snapshots after moving by amount $\delta x$ highlighted by rectangles}.}
 	\label{DM_FIG}
 \end{figure}
 \section{ALGORITHM DESIGN} \label{ALGO}
-This section describes the algorithm that is used to compute the control mode with maximum goal disambiguation, thereby eliciting the most legible control command from the human. Section~\ref{NOT} outlines the mathematical notation used in the paper and Section~\ref{DM} describes the different considerations that inform the metric to disambiguate between multiple possible human intents. 
+\textcolor{blue}{This section describes the algorithm that is used to compute the control mode with maximum goal disambiguation, thereby eliciting the most legible control command from the human. Section~\ref{NOT} outlines the mathematical notation used in the paper and Section~\ref{DM} describes the different considerations that inform the metric to disambiguate between multiple possible human intents}. 
 
 \subsection{Notation}\label{NOT}
 
@@ -181,7 +181,7 @@ The disambiguation metric $\boldsymbol{D}_m$ is a measure of how legible the use
 
 The disambiguation metric $D_{k}$ encodes different aspects of how the goal confidences change upon moving along control dimension $k$. Figure~\ref{DM_FIG} is an illustrative example which shows how goal confidences can vary as a function of position along a control dimension. 
 
-A proper design of $D_{k}$ should take into account both immediate as well as long term benefits of moving in $k$ and combine them into one metric. In order to compute the characteristics of the goal confidences after an infinitesimal user-initiated robot motion we sample the confidence function in the neighborhood $x\pm\Delta x$ of the current pose of the robot, where $\Delta x$ is a small change along the control dimension. If the confidence functions depend on the user control command ($\boldsymbol{u}_h$) then during the sampling procedure the value of $\boldsymbol{u}_h$ is assumed to be one that would make the robot position go from $x$ to $x\pm\Delta x$ in unit time. The gradients of the confidence functions are then numerically approximated by computing the difference between the sampled confidence values in the neighborhood and the confidence evaluated at the current pose. We identify four important components to inform the design of $D_{k}$.
+\textcolor{blue}{A proper design of $D_{k}$ should take into account both immediate as well as long term benefits of moving in $k$ and combine them into one metric. In order to compute the characteristics of the goal confidences after an infinitesimal user-initiated robot motion we sample the confidence function in the neighborhood $x\pm\Delta x$ of the current pose of the robot, where $\Delta x$ is a small change along the control dimension. If the confidence functions depend on the user control command ($\boldsymbol{u}_h$) then during the sampling procedure the value of $\boldsymbol{u}_h$ is assumed to be one that would make the robot position go from $x$ to $x\pm\Delta x$ in unit time. The gradients of the confidence functions are then numerically approximated by computing the difference between the sampled confidence values in the neighborhood and the confidence evaluated at the current pose}. We identify four important components to inform the design of $D_{k}$.
 
 \subsubsection{Separation in confidences}
 A good measure for evaluating the disambiguation potential of a control dimension is to compute the \textit{separation}, $\Lambda_{k}$, in goal confidences. At any point in space this can be computed as the \textit{sum of pairwise distances} between the $n_g$ confidences.  Thus,
@@ -290,9 +290,9 @@ where $\dot{\boldsymbol{x}}$ indicates the velocity of the robot in the world fr
 \begin{equation*}
 \boldsymbol{u}_{r,g} = \dot{\boldsymbol{x}}_{attract} + \dot{\boldsymbol{x}}_{repel} 
 \end{equation*}
-Additionally, $P_g$ operates in full six dimensional Cartesian space and treats position and orientation as independent potential fields. \footnote{In our implementation confidence function \textbf{C2} is computed as
+Additionally, $P_g$ operates in full six dimensional Cartesian space and treats position and orientation as independent potential fields. \footnote{\textcolor{blue}{In our implementation confidence function \textbf{C2} is computed as
 	$c(\boldsymbol{x}, \boldsymbol{u}_h, \boldsymbol{u}_{r,g}) = \boldsymbol{u}_{h}^{trans}\cdot(\boldsymbol{x}_{g} - \boldsymbol{x})^{trans} + \boldsymbol{u}_h^{rot}\cdot\boldsymbol{u}_{r,g}^{(rot)}$
-	where $trans$ refers to the translational and $rot$ refers to the rotational parts of the entire control space.}
+	where $trans$ refers to the translational and $rot$ refers to the rotational parts of the entire control space.}}
 
 \section{SIMULATION STUDY} \label{SIMRESULTS}
 In this section we present evaluations of the disambiguation system for correctness within a simulated environment.
@@ -342,22 +342,22 @@ By contrast, using \textbf{C2},  $x$ was identified as the preferred dimension i
 
 If the best mode in the perturbed position was the same mode as $\boldsymbol{m}^*$, then the simplification did not adversely affect the identification of the disambiguating mode. Table~\ref{SIM} summarizes the number of times a match occurred for different configurations of the workspace (with $n_g$ = 3,4 and 5). While the simplification holds for $85$-$90\%$ of off-axis motions, we do observe a trend where performance drops as the number of goals increase. Intuitively this makes sense because disambiguation between goals will become harder as the number of goals increase. 
  
-\noindent{\textbf{C}. \textit{Discussion}}:  Our simulation results indicate a strong correlation between the intent inference power of a given confidence function and the disambiguation power of our algorithm. It is unsurprising that confidence functions which are information-poor approximations of human intent also perform less robustly when disambiguating between those approximations.
- Moreover, the algorithm could be used to pre-compute the most informative modes ahead of time, which then might be called on demand during the task execution---which could prove helpful for complex tasks and/or limited interfaces that require more information from the human for disambiguation. 
+\noindent{\textbf{C}. \textit{Discussion}}:  \textcolor{blue}{Our simulation results indicate a strong correlation between the intent inference power of a given confidence function and the disambiguation power of our algorithm. It is unsurprising that confidence functions which are information-poor approximations of human intent also perform less robustly when disambiguating between those approximations.
+ Moreover, the algorithm could be used to pre-compute the most informative modes ahead of time, which then might be called on demand during the task execution---which could prove helpful for complex tasks and/or limited interfaces that require more information from the human for disambiguation}. 
  \section{PILOT STUDY} \label{EXP}
  We next explore the use and utility of our disambiguation approach in a pilot study. Four subjects participated in the pilot study, (3 male, 1 female), and all were lab members.
  \subsection{Hardware}
  \begin{figure*}[ht]
  	\centering
  	\includegraphics[width = 1\hsize]{./figures/TASKS.png}
- 	\caption{Pilot study tasks. \textit{Left to right:} Training, Testing (Easy), Testing (Hard).}
+ 	\caption{\textcolor{blue}{Pilot study tasks. \textit{Left to right:} Training, Testing (Easy), Testing (Hard)}.}
  	\label{TASKS}
  \end{figure*}
  The experiments were performed using real hardware and simulated versions of the MICO robotic arm (Kinova Robotics, Canada), which is a 6 DOF robotic arm specifically designed for assistive purposes. The software system was implemented using the Robot Operating System (ROS) and data analysis was performed using MATLAB. 
  
  The human control command $\boldsymbol{u}_h$ was captured using two different control interfaces: 2-axis joystick and a head array, shown in Figure~\ref{J2_HA}. For both interfaces, the control interface signals are mapped to Cartesian velocities of the end effector of the robot. Additionally, the interfaces can also be used to request mode switch assistance. In using two interfaces, we hope to observe an increase in task effort for the head array due to the limited bandwidth and discrete nature of the signals.
  
- In detail the 2-axis joystick generates continuous signals and is capable of controlling a maximum of two control dimensions at a time. Different control modes can be accessed using the buttons on the interface. 
+ In detail, the 2-axis joystick generates continuous signals and is capable of controlling a maximum of two control dimensions at a time. Different control modes can be accessed using the buttons on the interface. 
  The head array generates 1-D discrete control signals, and consists of three switches operated by the head and embedded within the back and sides of the headrest. When used for controlling a robotic arm, the switch at the back is used to cycle between the control modes, and the switches on the left and right side control the motion of the end-effector in the positive and negative direction along a control dimension of the selected control mode.
  
    \begin{figure}[h]
@@ -378,10 +378,10 @@ If the best mode in the perturbed position was the same mode as $\boldsymbol{m}^
 
 \subsection{Tasks, Metrics and Protocol}
 \subsubsection*{Tasks}
- Tasks developed for our pilot study consisted of the following (Figure~\ref{TASKS}).
-\noindent\underline{\textit{Training}}: The user operates the robotic arm to perform simple reaching motions to three different goal locations. This is a training task and the primary purpose is to get the user accustomed to the operation of the interfaces, the blending-based assistance and the experiment protocol. 
+ \textcolor{blue}{Tasks developed for our pilot study consisted of the following (Figure~\ref{TASKS}).}
+\textcolor{blue}{\noindent\underline{\textit{Training}}: The user operates the robotic arm to perform simple reaching motions to three different goal locations. This is a training task and the primary purpose is to get the user accustomed to the operation of the interfaces, the blending-based assistance and the experiment protocol. }
 
-\noindent\underline{\textit{Testing}}: The user operates the robotic arm under two scenarios of varying difficulty. \textit{Easy}: Four objects, all with the same grasp orientations, \textit{Hard}: Five objects, all with different grasp orientations.
+\textcolor{blue}{\noindent\underline{\textit{Testing}}: The user operates the robotic arm under two scenarios of varying difficulty. \textit{Easy}: Four objects, all with the same grasp orientations, \textit{Hard}: Five objects, all with different grasp orientations.}
 
 \subsubsection*{Metrics}
  \textit{Task completion time} is the amount of time a user spends in accomplishing a task. \textit{Mode switches} refer to the number of times the user switched between various modes while performing the task and is an indicator of effort. 
@@ -415,8 +415,8 @@ In Figure~\ref{DATAPLOT} (bottom row), a statistically significant decrease in t
 \noindent{\underline{\textit{On-Demand}}}: The number of disambiguation requests under the on-demand paradigm are reported in Table~\ref{ONDEMAND}. Although the subjects demonstrated a wide range of disambiguation request behaviors, we were able to observe a general trend of an increase in disambiguation requests with an increase in task difficulty. This shows that users were keen to explore the \textit{on-demand} option when the tasks became more difficult. 
 
 \subsection{Future Work}
-Currently when the user requests for assistance (in the on-demand paradigm) at any point in time and space, the algorithm discards all information contained in the history of user commands from the start of the trial till that point. That is, the disambiguation algorithm lacks \textit{memory} and reasons about the user's intent solely based on information that is available locally. However, in the real scenario, the user usually has an idea of what goal s/he is going for. Therefore, it might be useful to bias the computation of the ``best control mode'' by incorporating information from the past history of the robot trajectory and control commands by having a non-uniform prior over the intended goals such that the control mode chosen will always be useful for the human in reaching the goal s/he has in mind. This will also likely improve the robustness and result in higher user acceptance.
-Secondly, the algorithm only tries to maximize the utility value \textit{for} the robot (as encoded in the disambiguation metric $\boldsymbol{D}_m$). It is also important to take into account the users' preferences and utility for operating in the mode selected by the algorithm. Concepts from decision theory and expected utility theory can be used to enhance the current framework. Our pilot study revealed some promising trends and therefore a more extensive user study with motor-impaired subjects will be conducted in the future to evaluate the utility value of the disambiguation assistance system and further explore and understand the disambiguation request patterns of users. 
+\textcolor{blue}{Currently when the user requests for assistance (in the on-demand paradigm) at any point in time and space, the algorithm discards all information contained in the history of user commands from the start of the trial till that point. That is, the disambiguation algorithm lacks \textit{memory} and reasons about the user's intent solely based on information that is available locally. However, in the real scenario, the user usually has an idea of what goal s/he is going for. Therefore, it might be useful to bias the computation of the ``best control mode'' by incorporating information from the past history of the robot trajectory and control commands by having a non-uniform prior over the intended goals such that the control mode chosen will always be useful for the human in reaching the goal s/he has in mind. This will also likely improve the robustness, efficacy of the algorithm and result in higher user acceptance.
+Secondly, the algorithm only tries to maximize the utility value \textit{for} the robot (as encoded in the disambiguation metric $\boldsymbol{D}_m$). It is also important to take into account the users' preferences and utility for operating in the mode selected by the algorithm. Concepts from decision theory and expected utility theory can be used to enhance the current framework. Our pilot study revealed some promising trends and therefore a more extensive user study with motor-impaired subjects will be conducted in the future to evaluate the utility value of the disambiguation assistance system and further explore and understand the disambiguation request patterns of users. }
 \section{CONCLUSIONS}\label{DC}
 \begin{table}[t]
 	\centering
@@ -444,9 +444,9 @@ Secondly, the algorithm only tries to maximize the utility value \textit{for} th
 In this paper, we have presented an algorithm for \textit{intent disambiguation assistance} with a shared-control robotic arm. We also introduced the notion of \textit{inverse legibility}, in which the human-generated actions are legible enough \textit{for} the robot to infer the human intent confidently and accurately. The goal of the algorithm developed in this paper is to seek legible control commands from the human by placing the control in those modes able to \textit{maximally disambiguate} between the various goals in the scene. Preliminary pilot study results  suggest that the disambiguation paradigm proposed in this work to be promising. Our simulation work evaluated the robustness of the algorithm and the impact of different confidence functions on intent disambiguation. In our future work, as informed by the pilot study we plan to enhance our algorithm, to improve task performance and extend the framework into an automated mode switch assistance system. 
 
 \section*{Acknowledgments}
-This material is based upon work supported by the National Science Foundation under Grant CNS 15544741. Any opinions, findings and conclusions or
+\textcolor{blue}{This material is based upon work supported by the National Science Foundation under Grant CNS 15544741. Any opinions, findings and conclusions or
 recommendations expressed in this material are those of the authors and do
-not necessarily reflect the views of the aforementioned institutions.
+not necessarily reflect the views of the aforementioned institutions.}
 %Funding source omitted for review. 
 %\subsection{Subsection Heading Here}
 %Subsection text here.
