--- a/Conference_Final/references.bib
+++ b/Conference_Final/references.bib
@@ -19,6 +19,18 @@
 	year={2017},
 	publisher={Nature Publishing Group}
 }
+@book{dragan2012formalizing,
+	title={Formalizing assistive teleoperation},
+	author={Dragan, Anca D. and Srinivasa, Siddhartha S.},
+	year={2012},
+	publisher={MIT Press}
+}
+@inproceedings{dragan2012assistive,
+	title={Assistive teleoperation for manipulation tasks},
+	author={Dragan, Anca D. and Srinivasa, Siddhartha S.},
+	booktitle={Proceedings of ACM/IEEE International Conference on Human-Robot Interaction (HRI},
+	year={2012}
+}
 @article{dragan2013policy,
 	title={A policy-blending formalism for shared control},
 	author={Dragan, Anca D. and Srinivasa, Siddhartha S.},
