--- a/Conference_Final/references.bib
+++ b/Conference_Final/references.bib
@@ -28,7 +28,7 @@
 @inproceedings{dragan2012assistive,
 	title={Assistive teleoperation for manipulation tasks},
 	author={Dragan, Anca D. and Srinivasa, Siddhartha S.},
-	booktitle={Proceedings of ACM/IEEE International Conference on Human-Robot Interaction (HRI},
+	booktitle={Proceedings of ACM/IEEE International Conference on Human-Robot Interaction (HRI)},
 	year={2012}
 }
 @article{dragan2013policy,
