--- a/Conference_Final/references.bib
+++ b/Conference_Final/references.bib
@@ -19,6 +19,20 @@
 	year={2017},
 	publisher={Nature Publishing Group}
 }
+@article{tavakkoli2007vision,
+	title={A vision-based architecture for intent recognition},
+	author={Tavakkoli, Alireza and Kelley, Richard and King, Christopher and Nicolescu, Mircea and Nicolescu, Monica and Bebis, George},
+	journal={Advances in Visual Computing},
+	pages={173--182},
+	year={2007},
+	publisher={Springer}
+}
+@inproceedings{wasson2003user,
+	title={User intent in a shared control framework for pedestrian mobility aids},
+	author={Wasson, Glenn and Sheth, Pradip and Alwan, Majd and Granata, Kevin and Ledoux, Alexandre and Huang, Cunjun},
+	booktitle={Proceedings of the IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},
+	year={2003}
+}
 @book{dragan2012formalizing,
 	title={Formalizing assistive teleoperation},
 	author={Dragan, Anca D. and Srinivasa, Siddhartha S.},
@@ -191,7 +205,7 @@
 @inproceedings{sorokin2010people,
 	title={People helping robots helping people: Crowdsourcing for grasping novel objects},
 	author={Sorokin, Alexander and Berenson, Dmitry and Srinivasa, Siddhartha S. and Hebert, Martial},
-	booktitle={IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},
+	booktitle={Proceedings of the IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},
 	year={2010}
 }
 
